# d2a

./: .gitignore  Dockerfile  LICENSE  README.rst  demo_requirements.txt  docker-compose.yml  geoalchemy2.txt  models.py  setup.cfg  setup.py  test_requirements.txt  test_requires.txt  tox.ini
.circleci/: config.yml
.github/workflows/: build.yaml  master.yaml  tests.yaml  topic.yaml
apps/: manage.py
apps/apps/: wsgi.py
apps/common_app/: apps.py  models.py  tests.py
apps/mysql_app/: apps.py  models.py  models_sqla.py
apps/postgresql_app/: apps.py  models.py
apps/settings/: .base.py.swp  base.py  mysql.py  postgresql.py
d2a/: __init__.py  alchemy.py  apps.py  compat.py  db.py  django.py  fields.py  geoalchemy2.py  missing.py  original_types.py  parser.py  parsers.py  types.py  utils.py
project_mysql/: tests.py
project_mysql/books/: models.py  models_sqla.py
project_mysql/project_mysql/: urls.py  wsgi.py
project_mysql/sales/: models.py  models_sqla.py
project_mysql/settings/: base.py
project_mysql/tests/: test_db.py  test_fields.py
project_postgis/places/: admin.py  apps.py  models.py
project_postgis/project_postgis/: urls.py  wsgi.py
project_postgis/settings/: __init__.py  base.py
project_postgis/tests/: test_db.py  test_fields.py
project_postgresql/: tests.py
project_postgresql/books/: models.py  models_sqla.py
project_postgresql/project_postgresql/: urls.py  wsgi.py
requirements/: demo_geoalchemy2.rst  test_requirements.txt
tests/: dummy_settings.py  test_fields.py  test_mysql.py  test_postgresql.py  test_types.py  test_utils.py
(+16 files in other folders)
