[metadata]
name = d2a
version = 1.1.2
author = righ
author_email = righ.m9@gmail.com
url = https://github.com/righ/d2a
license = MIT
classifier = 
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Topic :: Software Development
keywords = 
  django
  sqlalchemy
  model
  mapping
  decralation
  table
  schema
  expression
  orm
description = It converts django models to a sqlalchemy orm/expression objects.
long_description = file: README.rst

[options]
packages = find:
