[metadata]
name = d2a
version = 2.2.0
author = righ
author_email = righ.m9@gmail.com
url = https://github.com/walkframe/d2a
license = MIT
classifier = 
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Topic :: Software Development
keywords = 
  django
  sqlalchemy
  alchemy
  model
  mapping
  decralation
  table
  schema
  expression
  orm
  convert
description = It converts django models to sqlalchemy orm/expression objects.
long_description = file: README.rst

[options]
packages = find:
